# rcal

./: Cargo.toml  _typos.toml  run-fuzz.sh
assets/: parameter_template.rs  parameters.kdl
benches/: preparse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: preparse.rs
hooks/: pre-commit  pre-push
src/: error.rs  lib.rs  names.rs  parameters.rs  preparse.rs  properties.rs  rrule.rs  rrule_error.rs  unfolded.rs  values.rs  xrule.rs  yrule.rs
src/parameter/: mod.rs  parameter_value.rs  values.rs
src/preparse/: byte_by_byte.rs  mod.rs  tests.rs  with_regex.rs
src/property/: mod.rs
tests/: codegen.rs  compare-preparse-algorithms.rs
