[package]
name = "rrule-jiff"
version = "0.1.0"
edition = "2024"
description = "Parse RFC 5545 (iCalendar) RRULE content lines, using jiff for date/time values"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yarrow/rrule-jiff"
readme = "README.md"
keywords = ["RFC5545", "recurrence-rule", "rrule", "iCal", "iCalendar"]
categories = ["date-and-time", "parser-implementations"]

[dependencies]
bstr = { version = "1.11.3", default-features = false, features = ["std"] }
jiff = "0.2.4"
memchr = "2.7.4"
paste = "1.0.15"
winnow = "0.7.4"

[lints.rust]
warnings = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
match_on_vec_items = "allow"
missing_errors_doc = "allow"
items_after_statements = "allow"
enum_glob_use = "allow"
ref_option = "allow"
redundant_closure_for_method_calls = "allow"

[dev-dependencies]
pretty_assertions = "1.4.1"
