[package]
name = "rcal"
version = "0.1.0"
edition = "2024"
description = "iCalendar parser, using jiff for date/time values"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yarrow/jcal"
readme = "README.md"
keywords = ["RFC5545", "recurrence-rule", "rrule", "iCal", "iCalendar", "jiff"]
categories = ["date-and-time", "parser-implementations"]

[lib]
name = "rcal"
path = "src/lib.rs"

[dependencies]
bstr = { version = "1.11.3", default-features = false, features = ["std"] }
heck = "0.5.0"
indexmap = "2.9.0"
jiff = "0.2.4"
litemap = "0.7.5"
memchr = "2.7.4"
nonempty = "0.11.0"
paste = "1.0.15"
regex = "1.11.1"
rustc-hash = "2.1.1"
thiserror = "2.0.12"
winnow = "0.7.4"

[lints.rust]
warnings = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
enum_glob_use = "allow"
items_after_statements = "allow"
len_zero = "allow"
match_on_vec_items = "allow"
missing_errors_doc = "allow"
needless_raw_string_hashes = "allow"
needless_return = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
ref_option = "allow"
similar_names = "allow"
single_match_else = "allow"

[dev-dependencies]
anyhow = "1.0.98"
codegenrs = { version = "3.0.2", default-features = false }
criterion = "0.5.1"
kdl = "6.3.4"
pretty_assertions = "1.4.1"
snapbox = "0.6.21"

[[bench]]
name = "preparse"
harness = false
